Pievienoju to ka ja ekrāna izmērs ir 1920 x 1080 tad programma ir par visu ekrānu pretējā gadijumā nē. Iesāku uz darbinieku ielogošanās lapas veidošanas

--- a/bin/text/text_lv.properties
+++ b/bin/text/text_lv.properties
@@ -5,4 +5,4 @@ JFrame_title_default=Pazi\u0146ojums
 
 fClose_exit=Apstiprin\u0101t
 fClose_cancel=Atcelt
-fClose_text=Vai esi pabeidzis visus savus uzdevumus?
+fClose_text=<HTML><br>Vai esi pabeidzis visus savus uzdevumus?</HTML>
