--- a/bin/text/text_lv.properties
+++ b/bin/text/text_lv.properties
@@ -1,6 +1,12 @@
 JFrame_title=Picas Sast\u0101d\u012Bt\u0101js
 JFrame_title_default=Pazi\u0146ojums
 
+#Log in panel
+
+llogInText=Sveiki!
+tidInput=Ievadiet savu ID
+llogInTextIncorrect=Nepareizi ievad\u012Bts ID!
+
 #Exit confirmation panel
 
 fClose_exit=Apstiprin\u0101t
