--- a/bin/text/text_lv.properties
+++ b/bin/text/text_lv.properties
@@ -6,9 +6,13 @@ JFrame_title_default=Pazi\u0146ojums
 llogInText=Sveiki!
 tidInput=Ievadiet savu ID
 llogInTextIncorrect=Nepareizi ievad\u012Bts ID!
-
+lloginInfoText=L\u016Bdzu ievadiet savu darbinieka ID
 #Exit confirmation panel
 
 fClose_exit=Apstiprin\u0101t
 fClose_cancel=Atcelt
 fClose_text=<HTML><br>Vai esi pabeidzis visus savus uzdevumus?</HTML>
+
+#Panel
+
+settings=Iestat\u012Bjumi
