--- a/resources/text/text_lv.properties
+++ b/resources/text/text_lv.properties
@@ -15,4 +15,6 @@ fClose_text=<HTML><br>Vai esi pabeidzis visus savus uzdevumus?</HTML>
 
 #Panel
 
+register=Re\u0123istr\u0113t jaunu pas\u016Btijumu
+lookup_orders=Apskat\u012Bt pas\u016Btijumus
 settings=Iestat\u012Bjumi
