--- a/resources/text/text_lv.properties
+++ b/resources/text/text_lv.properties
@@ -22,3 +22,6 @@ settings=Iestat\u012Bjumi
 #Panel - settings
 lLanguage=Sist\u0113mas valoda:
 rButton=Restart\u0113t sist\u0113mu
+
+#Items
+iCrust=Pl\u0101na
