--- a/resources/text/text_lv.properties
+++ b/resources/text/text_lv.properties
@@ -24,4 +24,25 @@ lLanguage=Sist\u0113mas valoda:
 rButton=Restart\u0113t sist\u0113mu
 
 #Items
-iCrust=Pl\u0101na
+iPizza=Pica
+
+lSize=Izm\u0113rs
+lCrust=Garozas
+iCrustThin=Pl\u0101n\u0101 garoza
+iCrustFilled=Pild\u012Bt\u0101 garoza
+iCrustThick=Biez\u0101 garoza
+
+lSauce=M\u0113rces
+iTomataSauce=Tom\u0101tu m\u0113rce
+iMayo=Majon\u0113ze
+ibbqSauce=BBQ m\u0113rce
+
+tToppings=Papildus
+tCheese=Siers
+tPepperoni=Peperoni
+tMushrooms=S\u0113nes
+tOnions=S\u012Bpoli
+tOlives=Ol\u012Bves
+
+lTotalPrice=Kop\u0101:
+bAddToCart=Pievienot
