--- a/bin/text/text_en.properties
+++ b/bin/text/text_en.properties
@@ -1,29 +1,69 @@
-JFrame_title=Pizza system
+JFrame_title=Pizza Configurator
 JFrame_title_default=Notification
 
 #Log in panel
-
 llogInText=Hello!
 tidInput=Enter your ID
 llogInTextIncorrect=Incorrect ID entered!
 lloginInfoText=Please enter your employee ID
-#Exit confirmation panel
 
+#Exit confirmation panel
 fClose_exit=Confirm
 fClose_cancel=Cancel
-fClose_text=<HTML><br>Have you completed all your tasks?</HTML>
+fClose_text=<HTML><br>Have you finished all your tasks?</HTML>
 
 #Panel
-
-register=Register a new order
-lookup_orders=View orders
+register=Register New Order
+lookup_orders=View Orders
 settings=Settings
 
 #Panel - settings
-lLanguage=System language:
-rButton=Restart your system
+lLanguage=System Language:
+rButton=Restart System
 
 #Items
+iPizza=Pizza
+wanOrderPizza=Include pizza in order?
 
-iCrustThin=Thin crust
-iCrustFilled=Filled crust
+lSize=Size
+lCrust=Crust
+iCrustThin=Thin Crust
+iCrustFilled=Filled Crust
+iCrustThick=Thick Crust
+
+lSauce=Sauces
+iTomataSauce=Tomato Sauce
+iMayo=Mayonnaise
+ibbqSauce=BBQ Sauce
+
+tToppings=Toppings
+tCheese=Cheese
+tPepperoni=Pepperoni
+tMushrooms=Mushrooms
+tOnions=Onions
+tOlives=Olives
+
+sMozzarellaSticks=Mozzarella Sticks
+sGarlicBread=Garlic Bread
+sOnionRings=Onion Rings
+
+lDrinks=Drinks
+dWater=Water
+lSnacks=Snacks
+
+lTotalPrice=Total:
+bAddToCart=Add to Cart
+bAddExtras=Add Extras
+
+lCustHeader=Order Info
+tfName=Name
+tfPhone=Phone No.
+cbDelivery=Delivery?
+bConfirm=Confirm
+
+errMesNotAllInputs=Please enter all parameters
+confirmOrder=Order Placed
+
+head=Order History
+delete=Delete
+modify=Modify
