--- a/bin/text/text_lv.properties
+++ b/bin/text/text_lv.properties
@@ -26,6 +26,8 @@ rButton=Restart\u0113t sist\u0113mu
 #Items
 iPizza=Pica
 
+wanOrderPizza=Picu ar\u012B \u0146ems?
+
 lSize=Izm\u0113rs
 lCrust=Garozas
 iCrustThin=Pl\u0101n\u0101 garoza
@@ -44,5 +46,30 @@ tMushrooms=S\u0113nes
 tOnions=S\u012Bpoli
 tOlives=Ol\u012Bves
 
+sMozzarellaSticks=Mocarrelas n\u016Bji\u0146as
+sGarlicBread=\u0136iploku maize
+sOnionRings=S\u012Bpolu gredzeni
+
+lDrinks=Dz\u0113rieni
+
+dWater=\u016Adens
+
+lSnacks=Na\u0161\u0137i
+
 lTotalPrice=Kop\u0101:
 bAddToCart=Pievienot
+bAddExtras=Pievienot ekstras
+
+lCustHeader=Pas\u016Btijuma info
+tfName=V\u0101rds
+tfPhone=Telefons Nr.
+cbDelivery=Pieg\u0101d\u0101t?
+bConfirm=Apstiprin\u0101t
+
+errMesNotAllInputs=Ievadiet visus parametrus
+confirmOrder=Pas\u016Btijums veikts
+
+head=Pas\u016Btijumu v\u0113sture
+
+delete=Dz\u0113st
+modify=Modific\u0113t
