--- a/resources/text/text_lv.properties
+++ b/resources/text/text_lv.properties
@@ -73,3 +73,5 @@ head=Pas\u016Btijumu v\u0113sture
 
 delete=Dz\u0113st
 modify=Modific\u0113t
+
+settingResizable=Piel\u0101gojams loga izm\u0113rs
